# mcp-composio

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  server.py
docs/: integration.md
src/composio_mcp/: __init__.py  client.py  models.py  notion.py  zoom.py
src/composio_mcp/models/: __init__.py  notion.py  zoom.py
