[project]
name = "mcp-composio"
version = "0.1.0"
description = "Composio management MCP server for provisioning connections and auth configs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "composio", "oauth", "integrations"]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.26.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/composio_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
